[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 360, 0, 0, 0, 0, 0, 360, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 292, 175 )
recoil_range_deg = 30

[node name="Label" type="Label" parent="."]
margin_left = 22.0
margin_top = 14.0
margin_right = 62.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Amount: "

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="die" from="YSort/Player" to="." method="_on_Player_die"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
